[gd_scene load_steps=9 format=3 uid="uid://dfdk211hkwyvt"]

[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="1_76y8f"]
[ext_resource type="Script" path="res://Menus/MiniGamesMenu.gd" id="2_kb444"]
[ext_resource type="Texture2D" uid="uid://c3jilcdrom06" path="res://Assets/Background_Menus2.png" id="3_arx0m"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="4_jtb3g"]
[ext_resource type="Texture2D" uid="uid://dam4mqrvrhbyi" path="res://Assets/tdm.png" id="4_uxjfg"]
[ext_resource type="Texture2D" uid="uid://lhtxblkgkla4" path="res://Assets/pp.png" id="5_gjff6"]
[ext_resource type="Texture2D" uid="uid://dy1xja56i36wv" path="res://Assets/ct.png" id="6_157cu"]
[ext_resource type="Texture2D" uid="uid://f234w4h0csj5" path="res://Assets/tp.png" id="7_pi4so"]

[node name="minigames_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76y8f")
script = ExtResource("2_kb444")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -486.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.72948, 1.3717)
texture = ExtResource("3_arx0m")
expand_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.164
anchor_right = 0.926
anchor_bottom = 0.884
offset_left = -0.120003
offset_top = -0.272003
offset_right = 0.247925
offset_bottom = 0.167969
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TdMButton" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../CTButton")
focus_neighbor_bottom = NodePath("../PPButton")
theme = ExtResource("1_76y8f")
theme_override_font_sizes/font_size = 60
text = "Tornado 
da
Mem√≥ria"
icon = ExtResource("4_uxjfg")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="PPButton" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TdMButton")
focus_neighbor_right = NodePath("../TPButton")
theme = ExtResource("1_76y8f")
theme_override_font_sizes/font_size = 60
text = "Par
Perfeito"
icon = ExtResource("5_gjff6")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="CTButton" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../TdMButton")
focus_neighbor_bottom = NodePath("../TPButton")
theme = ExtResource("1_76y8f")
theme_override_font_sizes/font_size = 60
text = "Contando
Trocos"
icon = ExtResource("6_157cu")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="TPButton" type="Button" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../PPButton")
focus_neighbor_top = NodePath("../CTButton")
theme = ExtResource("1_76y8f")
theme_override_font_sizes/font_size = 60
text = "Tudo
Pronto?"
icon = ExtResource("7_pi4so")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("1_76y8f")
text = " Voltar"
icon = ExtResource("4_jtb3g")

[connection signal="pressed" from="VBoxContainer3/HBoxContainer/TdMButton" to="." method="_on_tdm_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/PPButton" to="." method="_on_pp_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/CTButton" to="." method="_on_ct_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/TPButton" to="." method="_on_tp_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
